--- a/trunk/templates/bkp/view_computer.html
+++ b/trunk/templates/bkp/view_computer.html
@@ -8,7 +8,7 @@
 	
 	<ul>
 	{% for c in comps %}
-		<li><a href="{{script_name}}/computer/{{c.id}}">{{ c.name }}</a> | Hash Attributes |  <a href="{{script_name}}/computer/{{c.id}}/edit">Alterar</a> | {% ifequal c.id comp.id %} (Selecao Atual) {% endifequal %} <form class="link" action="{{script_name}}/computer/{{comp.id}}/delete" method="post">
+		<li><a href="{{script_name}}/computer/{{c.id}}">{{ c.name }}</a> | Hash Attributes |  <a href="{{script_name}}/computer/{{c.id}}/edit">Alterar</a> | {% ifequal c.id comp.id %} (Selecao Atual) {% endifequal %} <form class="link" action="{{script_name}}/computer/{{c.id}}/delete" method="post">
 	    <button type="submit">remover</button>
 	</form></li>
 	{% endfor %}
