--- a/trunk/templates/bkp/view_schedule.html
+++ b/trunk/templates/bkp/view_schedule.html
@@ -8,19 +8,26 @@
 	<h2>Computadores</h2>
 	<ul>
 	{% for c in comps %}
-		<li><a href="{{script_name}}/computer/{{c.id}}">{{ c.name }}</a> | Hash Attributes |  <a href="{{script_name}}/computer/{{c.id}}/edit">Alterar</a> | {% ifequal c.id comp.id %} (Selecao Atual) {% endifequal %} <form class="link" action="{{script_name}}/computer/{{c.id}}/delete" method="post">
-	    <button type="submit">remover</button>
-	</form></li>
+		<form class="link" action="{{script_name}}/computer/{{c.id}}/delete" method="post">
+		<li><a href="{{script_name}}/computer/{{c.id}}">{{ c.name }}</a> | Hash Attributes |  <a href="{{script_name}}/computer/{{c.id}}/edit">Alterar</a> | 
+	    <button type="submit">Remover</button> | {% ifequal c.id comp.id %} (Selecao Atual) {% endifequal %} 
+		</li></form>
 	{% endfor %}
 	</ul>
 	
 	<hr />
 <!--  Expandable/Collapsible Area -->
 	<h3>Adicionar Computador</h3>
-	<form action="{{script_name}}/computer/" method="post">
-	{{ compform.as_p }}
-	<input type="submit" value="Submit" />
-	</form> 
+
+<form action="{{script_name}}/computer/" method="post">
+    {% for field in compform %}
+        <div class="fieldWrapper">
+            {{ field.errors }}
+            {{ field.label_tag }}: {{ field }}
+        </div>
+    {% endfor %}
+    <p><input type="submit" value="Salvar" /></p>
+</form>
 	
 	<hr />
 <!-- End Computers -->
