Changed Computer model name attribute to computer_name Changed Procedure model name attribute to procedure_name Added attribute password to Computer model
Changed views.py for:
 + Form validation for creating Computer
 + Form validation for creating Procedure
 + Form validation for creating FileSet
 + Form validation for creating Schedule
 + Form validation for creating WeeklyTrigger
 + Form validation for creating MonthlyTrigger

Added customfields.py for handling fields validations

--- a/trunk/templates/bkp/edit_computer.html
+++ b/trunk/templates/bkp/edit_computer.html
@@ -2,11 +2,17 @@
 <hr />
 <h2> Alterar Computador </h2>
 
-<form action="{{script_name}}/computer/{{comp.id}}/edit" method="post">
-{{ form.as_p }}
-<input type="submit" value="Submit" />
-</form> 
 
-<a href="{{script_name}}/computers/">voltar</a>
+<form action="{{script_name}}/computer/{{comp.id}}/edit" method="post">
+    {% for field in compform %}
+        <div class="fieldWrapper">
+            {{ field.errors }}
+            {{ field.label_tag }}: {{ field }}
+        </div>
+    {% endfor %}
+    <p><input type="submit" value="Salvar" /></p>
+</form>
+
+<a href="{{script_name}}/computers/">Cancelar</a>
 <br />
 
