Added: computer model definition for random password generation Changed: views.py get_object_or_404 instead of try/except blocks Changed: urls.py now list_computers.html is the root location Added: edit procedure capacity Fixed: wrong form object variable names in trigger creation Added: attribute password in computers display loop Added: attribute trigger hour in schedules display loop Added: attribute trigger level in shcedules display loop Added: templatetags folder Added: bkp_extras.py to hold template tags Added: custom template tag to retrieve trigger level Added: custom template tag to retrieve trigger hour

--- a/trunk/templates/bkp/edit_procedure.html
+++ b/trunk/templates/bkp/edit_procedure.html
@@ -1,10 +1,10 @@
 <h1> <a href="{{script_name}}/">Prototipo Backup Corporativo</a> </h1>
 <hr />
-<h2> Alterar Computador </h2>
+<h2> Alterar Procedimento </h2>
 
 
-<form action="{{script_name}}/computer/{{comp.id}}/edit" method="post">
-    {% for field in compform %}
+<form action="{{script_name}}/computer/{{comp.id}}/procedure/{{proc.id}}/edit" method="post">
+    {% for field in procform %}
         <div class="fieldWrapper">
             {{ field.errors }}
             {{ field.label_tag }}: {{ field }}
@@ -13,6 +13,6 @@
     <p><input type="submit" value="Salvar" /></p>
 </form>
 
-<a href="{{script_name}}/computer/{{comp.id}}">Cancelar</a>
+<a href="{{script_name}}/computer/{{comp.id}}/procedure/{{proc.id}}">Cancelar</a>
 <br />
 
