Changed: commenting style Added: LoginForm Added: Session new/delete capacity Changed: views.py require login in actions Added: welcome block to templates Added: new_session.html

--- a/trunk/templates/bkp/view_procedure.html
+++ b/trunk/templates/bkp/view_procedure.html
@@ -5,6 +5,16 @@
 	<hr />
 <!-- End Header -->
 
+<!-- Welcome -->
+
+<ul><form class="link" action="{{script_name}}/session/delete" method="post">
+<li>Welcome, {{current_user.username}} | <button type="submit">Sair</button> | 
+</li></form>
+</ul>
+
+<!-- End Welcome -->
+
+
 <!-- Begin Computers -->
 	<h2>Computadores</h2>
 	<ul>
