--- a/trunk/templates/bkp/edit_computer.html
+++ b/trunk/templates/bkp/edit_computer.html
@@ -1,5 +1,16 @@
 <h1> <a href="{{script_name}}/">Prototipo Backup Corporativo</a> </h1>
 <hr />
+
+<!-- Welcome -->
+
+<ul><form class="link" action="{{script_name}}/session/delete" method="post">
+<li>Welcome, {{current_user.username}} | <button type="submit">Sair</button> | 
+</li></form>
+</ul>
+
+<!-- End Welcome -->
+
+
 <h2> Alterar Computador </h2>
 
 
