--- a/trunk/templates/bkp/view_schedule.html
+++ b/trunk/templates/bkp/view_schedule.html
@@ -6,6 +6,15 @@
 	<hr />
 <!-- End Header -->
 
+<!-- Welcome -->
+
+<ul><form class="link" action="{{script_name}}/session/delete" method="post">
+<li>Welcome, {{current_user.username}} | <button type="submit">Sair</button> | 
+</li></form>
+</ul>
+
+<!-- End Welcome -->
+
 
 <!-- Begin Computers -->
 	<h2>Computadores</h2>
