Added: bkp/edit_config.html Added: models.py GlobalConfig model Added: urls.py route to edit global config Added: forms.py GlobalConfigForm definition to handle global config edition Added: views.py definitions to handle global config edition Added: signals.py definitions for global config file generation Changed: monthdayslist regular expression to allow 30 and 31 entries

--- a/trunk/templates/bkp/base.html
+++ b/trunk/templates/bkp/base.html
@@ -10,7 +10,7 @@
 	<body>
 		<div id="site">
 			<div id="topo">
-				<h1>Linconet - Tecnologia Estratégica</h1>
+				<h1>Linconet - Tecnologia EstratÃ©gica</h1>
 				<div id="menu"></div>
 			</div>
 			<div id="conteudo">	
