+ Added stats page and few related items

--- a/trunk/templates/bkp/edit_config.html
+++ b/trunk/templates/bkp/edit_config.html
@@ -17,6 +17,7 @@
 	<h2>Configurações Globais</h2>
 
 {% if gconfig %}
+{% else %}
 <h3>Por favor, defina as configurações iniciais do seu sistema.</h3>
 {% endif %}
 
