--- a/trunk/templates/bkp/base.html
+++ b/trunk/templates/bkp/base.html
@@ -14,7 +14,7 @@
 				<div id="menu"></div>
 			</div>
 			<div id="conteudo">	
-				{% block content %}{% enblock %}
+				{% block content %}{% endblock %}
 			</div>
 			<div id="rodape">
 			</div>
