--- a/trunk/templates/bkp/view_computer.html
+++ b/trunk/templates/bkp/view_computer.html
@@ -1,3 +1,6 @@
+{% extends "bkp/base.html" %}
+
+{% block content %}
 <!-- Begin Header -->
 	<h1> <a href="{{script_name}}/">Protótipo Backup Corporativo</a> </h1>
 	<hr />
@@ -96,3 +99,4 @@
 	<h2>Detalhe Agendamento</h2>
 	<p>Não há agendamento selecionado.</p>
 <!-- End Triggers -->
+{% endblock %}
