--- a/trunk/templates/bkp/view_computer.html
+++ b/trunk/templates/bkp/view_computer.html
@@ -35,30 +35,30 @@
 	<form class="link" action="{{script_name}}/computer/{{comp.id}}/procedure/{{p.id}}/delete" method="post">
 	<li><a href="{{script_name}}/computer/{{comp.id}}/procedure/{{p.id}}">{{ p.procedure_name }}</a> | 
 	<a href="{{script_name}}/computer/{{comp.id}}/procedure/{{p.id}}/edit">Alterar</a>  |
-	<button type="submit">Remover</button> |
+	<button type="submit">Remover</button>
 	</li></form>
 	{% endfor %}
 	</ul>
 	{% else %}
 	<p>Não há procedimentos para este computador.</p>
-	{% endif %}
-	
-	<hr />
 <!--  Expandable/Collapsible Area -->
 	<h3>Adicionar Procedimento</h3>
 
-<form action="{{script_name}}/computer/{{comp.id}}/procedure/" method="post">
-    {% for field in procform %}
-        <div class="fieldWrapper">
-            {{ field.errors }}
-            {{ field.label_tag }}: {{ field }}
-        </div>
-    {% endfor %}
-    <p><input type="submit" value="Salvar" /></p>
-</form>
+	<form action="{{script_name}}/computer/{{comp.id}}/procedure/" method="post">
+	    {% for field in procform %}
+	        <div class="fieldWrapper">
+	            {{ field.errors }}
+	            {{ field.label_tag }}: {{ field }}
+	        </div>
+	    {% endfor %}
+	    <p><input type="submit" value="Salvar" /></p>
+	</form>
 
 	<hr />
 <!-- End Procedures -->
+	{% endif %}
+	
+	<hr />
 
 <!-- Begin FileSets -->
 	<h2>Locais</h2>
