Adicionando estilo no hr e no main_content.

--- a/trunk/templates/bkp/static/estilo.css
+++ b/trunk/templates/bkp/static/estilo.css
@@ -24,7 +24,12 @@ float: left;
 }
 
 #main_content {
-background: #EEE;
+background: #FAFAFA;
 float: right;
 width: 720px;
+}
+
+hr {
+padding-bottom: 20px;
+border: 0;
 }
