+ Added system dump/restore functionality

--- a/trunk/templates/bkp/edit_config.html
+++ b/trunk/templates/bkp/edit_config.html
@@ -31,6 +31,14 @@
     <p><input type="submit" value="Salvar" /></p>
 </form>
 
+<form action="{{script_name}}/dump/create" method="post">
+<p><input type="submit" value="Dump" /></p>
+</form>
+
+<form action="{{script_name}}/dump/restore" method="post">
+<p><input type="submit" value="Restore" /></p>
+</form>
+
 
 	<hr />
 
