--- a/trunk/templates/bkp/view_computer.html
+++ b/trunk/templates/bkp/view_computer.html
@@ -28,17 +28,17 @@
 {% endif %}
 
 <!-- Begin Procedures -->
-	<h2>Procedimentos</h2>
-	{% if procs %}
-	<ul>
-	{% for p in procs %}
-	<form class="link" action="{{script_name}}/computer/{{comp.id}}/procedure/{{p.id}}/delete" method="post">
-	<li><a href="{{script_name}}/computer/{{comp.id}}/procedure/{{p.id}}">{{ p.procedure_name }}</a> | 
-	<a href="{{script_name}}/computer/{{comp.id}}/procedure/{{p.id}}/edit">Alterar</a>  |
-	<button type="submit">Remover</button>
-	</li></form>
-	{% endfor %}
-	</ul>
+	<h3>Procedimentos</h3>
+	{% if comp.procedure_set.count %}
+    	<ul>
+        	{% for p in comp.procedure_set.all %}
+            	<form class="link" action="{{script_name}}/computer/{{comp.id}}/procedure/{{p.id}}/delete" method="post">
+            	<li><a href="{{script_name}}/computer/{{comp.id}}/procedure/{{p.id}}">{{ p.procedure_name }}</a> | 
+            	<a href="{{script_name}}/computer/{{comp.id}}/procedure/{{p.id}}/edit">Alterar</a>  |
+            	<button type="submit">Remover</button>
+            	</li></form>
+        	{% endfor %}
+    	</ul>
 	{% else %}
 	<p>Não há procedimentos para este computador.</p>
 <!--  Expandable/Collapsible Area -->
