--- a/trunk/templates/bkp/static/estilo.css
+++ b/trunk/templates/bkp/static/estilo.css
@@ -13,6 +13,61 @@ width: 960px;
 margin: 0 auto;
 }
 
+
+/* MENU */
+
+
+#topo {
+background:transparent url(/static/imagens/logo_linconet.gif) no-repeat scroll left center;
+height:100px;
+margin-top:35px;
+padding:0;
+}
+
+#topo h1 {
+background:transparent url(/static/imagens/logo_linconet_nome.gif) no-repeat scroll left center;
+height:36px;
+margin:18px 0 0 120px;
+overflow:hidden;
+padding:0;
+text-indent:-9999em;
+width:321px;
+}
+
+#topo h1 a {
+display:block;
+height:36px;
+width:321px;
+}
+
+#topo .menu {
+margin:5px 0 0 120px;
+}
+
+#topo .menu ul {
+background:transparent url(/static/imagens/bg_menu.gif) no-repeat scroll left top;
+height:37px;
+margin:0;
+overflow:hidden;
+padding:0 0 0 5px;
+width:815px;
+}
+
+#topo .menu ul li {
+display:inline;
+float:left;
+padding:0;
+}
+
+#topo .menu ul li a {
+color:#4B5555;
+display:block;
+font-size:12px;
+padding:13px 9px;
+}
+
+
+
 #conteudo {
 width: 960px;
 overflow: hidden;
